<resources>
    <string name="app_name">YMovie</string>
    <string name="successDelete">Success Delete</string>
    <string name="noFavoriteData">No Favorit Data</string>
    <string name="addFavorite">Add Favorite</string>
    <string name="deleteFavorite">Delete Favorite</string>
    <string name="detailMovie">detail movie</string>
    <string name="detailtv">detail tv</string>
    <string name="nodatafound">nodatafound</string>
    <string name="confirmfav">Do you want to remove it?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="title">title</string>
    <string name="detail">detail</string>
    <string name="share">share</string>
    <string name="button">button</string>
    <string name="change_language_settings">change_language_settings</string>
    <string name="home">Home</string>
    <string name="movie">Movie</string>
    <string name="tv">Tv</string>
    <string name="movie_favorite">Movie Favorite</string>
    <string name="tv_favorite">Tv Favorite</string>
    <string name="language">Language</string>
    <string name="vote_count">Vote Count</string>
    <string name="item_name">Item Name</string>
    <string name="release">Release</string>
    <string name="overview">Overview</string>
    <string name="vote_average">Rating</string>
    <string name="dummy_rating">6.5</string>
    <string name="content">Content</string>
    <string name="information">Information</string>
    <string name="todo">TODO</string>
    <string name="Popularity">Popularity</string>
    <string name="exit">Press back again to exit</string>
    <string name="favorite">Favorite</string>
    <string name="profile_name">Yoga Dimas Pambudi</string>
    <string name="profil_email">yoga.d.pambudi.1@gmail.com</string>
</resources>
