<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="4dp"
    android:background="@color/blackSecondary"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_poster"
            android:layout_width="150dp"
            android:layout_height="210dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_item_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:src="@color/colorAccent" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linear_satu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_toEndOf="@+id/cv_poster"
            android:gravity="start|center"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/cv_poster"
            tools:layout_editor_absoluteY="16dp">

            <TextView
                android:id="@+id/tv_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mmedium"
                android:maxLines="2"
                android:text="@string/item_name"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/size_font_16sp" />

            <TextView
                android:id="@+id/tv_released"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/mlight"
                android:text="@string/release"
                android:textColor="@color/whiteSecondary"
                android:textSize="@dimen/size_font_12sp" />

            <TextView
                android:id="@+id/tv_content_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:fontFamily="@font/mregular"
                android:maxLength="50"
                android:text="@string/overview"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/size_font_14sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_satu"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_toEndOf="@+id/cv_poster"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cv_poster">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mregular"
                android:text="@string/vote_average"
                android:textColor="@color/whitePrimary"
                android:textSize="@dimen/size_font_16sp" />


            <LinearLayout
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="@dimen/margin_10dp"
                android:background="@drawable/bg_circle_black"
                android:gravity="center"
                android:padding="@dimen/margin_4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_item_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mregular"
                        android:gravity="center"
                        android:text="@string/dummy_rating"
                        android:textColor="@color/whitePrimary"
                        android:textSize="@dimen/size_font_16sp" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/linear_satu"
            android:layout_alignEnd="@+id/linearLayout"
            android:layout_marginStart="18dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="41dp"
            android:layout_toEndOf="@+id/cv_poster"
            android:background="@color/whitePrimary"
            app:layout_constraintStart_toEndOf="@+id/cv_poster"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@+id/linearLayout"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_toEndOf="@+id/cv_poster"
            android:orientation="horizontal"
            android:padding="@dimen/margin_4dp"
            android:weightSum="2">


            <Button
                android:id="@+id/btn_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_black_rounded"
                android:contentDescription="@string/button"
                android:text="@string/detail"
                android:textColor="@color/whitePrimary"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_black_rounded"
                android:contentDescription="@string/button"
                android:text="@string/share"
                android:textColor="@color/whitePrimary"
                tools:ignore="ButtonStyle" />


        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>