<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackPrimary"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context="com.yogadimas.ymovie.activity.detail.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackPrimary">


        <ImageView
            android:id="@+id/img_item_header"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@color/overlayDark"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:fontFamily="@font/mregular"
            android:foregroundGravity="center_vertical"
            android:gravity="center"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/whitePrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_toolbar" />

        <TextView
            android:id="@+id/tv_released"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:fontFamily="@font/mlight"
            android:lineSpacingExtra="9dp"
            android:text="@string/release"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_title" />

        <include
            android:id="@+id/include"
            layout="@layout/layout_informationdetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_released" />

        <include
            layout="@layout/layout_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/include"
            app:layout_constraintStart_toEndOf="@+id/cv_poster"
            app:layout_constraintTop_toTopOf="@+id/include" />

        <ProgressBar
            android:id="@+id/progress_detail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_poster"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_marginTop="@dimen/margin_16dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_released">

            <ImageView
                android:id="@+id/img_item_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blackPrimary"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY" />

        </androidx.cardview.widget.CardView>

        <com.github.ivbaranov.mfb.MaterialFavoriteButton
            android:id="@+id/favorite_nice"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_black_rounded"
            app:layout_constraintEnd_toStartOf="@+id/cv_poster"
            app:layout_constraintStart_toStartOf="@+id/include"
            app:layout_constraintTop_toTopOf="@+id/include"
            app:mfb_bounce_duration="700"
            app:mfb_color="white"
            app:mfb_rotation_angle="216"
            app:mfb_rotation_duration="400"
            app:mfb_size="45"
            app:mfb_type="heart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_4dp"
            android:fontFamily="@font/mregular"
            android:text="@string/favorite"
            android:textColor="@color/whiteSecondary"
            android:textSize="@dimen/size_font_12sp"
            app:layout_constraintEnd_toStartOf="@+id/cv_poster"
            app:layout_constraintStart_toStartOf="@+id/include"
            app:layout_constraintTop_toBottomOf="@+id/favorite_nice" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>


